--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ body {
     line-height: 1.6;
     font-size: 18px;
     color: #333;
-    padding: 0 10px
+    padding: 0 10px;
+    font-family: 'Overpass', sans-serif;
 }
 
 h1, h2, h3 {
-    line-height: 1.2
+    line-height: 1.2;
 }
 
